--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Renovation Experts Guide - Find Your Perfect Renovation Expert</title>
     <meta name="description" content="Connect with the best home renovation experts. We match you with trusted professionals for kitchen, bathroom, and whole home renovations." />
